// SPDX-License-Identifier: Apache-2.0
// Copyright (c) 2020 Intel Corporation

syntax = "proto3";

service installapp {
    // Sync
    rpc InstallApp(InstallAppRequest) returns (InstallAppResponse) {
    }

    rpc UninstallApp(UninstallAppRequest) returns (UninstallAppResponse) {
    }

    rpc ReadAppContext(ReadAppContextRequest) returns (ReadAppContextResponse){
    }

}

message InstallAppRequest {
    string app_context = 1;
}

message InstallAppResponse {
    bool app_context_installed = 1;
    string app_context_install_message = 2;
}

message UninstallAppRequest {
    string app_context = 1;
}

message UninstallAppResponse {
    bool app_context_uninstalled = 1;
    string app_context_uninstall_message = 2;
}

message ReadAppContextRequest {
    string app_context = 1;
}

message ReadAppContextResponse {
    bool app_context_read_successful = 1;
    string app_context_read_message = 2;
}
